# group1

./: .gitignore  LICENSE.md  README.md
API/: app.js  database.js  package-lock.json  package.json
API/models/: asiakas_model.js  kortti_model.js  tili_model.js  toiminnot_model.js  yhteytyminen_model.js
API/routes/: asiakas.js  kortti.js  tili.js  toiminnot.js  yhteytyminen.js
API/views/: home.ejs
Bankautomat/: Bankautomat.pro  Pankki.pro  enterpin.cpp  enterpin.h  enterpin.ui  login.cpp  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  toiminnot.cpp  toiminnot.h  toiminnot.ui
Bankautomat/DLLs/DLLSerialPort/DLLSerialPort/: CMakeLists.txt  dllserialport.cpp  dllserialport.h
DLLs/DLLSerialPort/: DLLSerialPort.pro  dllserialport.cpp  dllserialport.h
DLLs/RestApiDLL/: RestApiDLL.pro  restapidll.cpp  restapidll.h
DLLs/build-DLLSerialPort-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
DLLs/build-RestApiDLL-Desktop_Qt_5_15_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-Bankautomat-Desktop_Qt_5_15_1_MinGW_32_bit-Profile/.qtc_clangd/: compile_commands.json
build-Bankautomat-Desktop_Qt_5_15_1_MinGW_32_bit-Release/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_enterpin.h  ui_mainwindow.h
build-Bankautomat-Desktop_Qt_5_15_1_MinGW_32_bit-Release/.qtc_clangd/: compile_commands.json
build-Bankautomat-Desktop_Qt_5_15_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_EnterPin.h  ui_mainwindow.h
db/: database.sql
old/Bankautomat/: Bankautomat.pro  (+3 more)
(+693 files in other folders)
